Remove /v1/daily endpoint and daily tables
