# internal/handler/handler.go
@@ -1,7 +1,6 @@
 package handler
 
 import (
-	"nTime/internal/daily"
 	"nTime/internal/device"
 	"nTime/internal/hijrimonth"
 	"nTime/internal/schedule"
@@ -14,13 +13,12 @@ type Server struct {
 	schedule *schedule.Service
 	hijri    *hijrimonth.Service
 	devices  *device.Service
-	daily    *daily.Service
 	app      AppInfo
 }
 
 func NewServer(cityRepo *city.Repository, scheduleSvc *schedule.Service, hijriSvc *hijrimonth.Service,
-	deviceSvc *device.Service, dailySvc *daily.Service, app AppInfo) *Server {
-	return &Server{cities: cityRepo, schedule: scheduleSvc, hijri: hijriSvc, devices: deviceSvc, daily: dailySvc, app: app}
+	deviceSvc *device.Service, app AppInfo) *Server {
+	return &Server{cities: cityRepo, schedule: scheduleSvc, hijri: hijriSvc, devices: deviceSvc, app: app}
 }
 
 var _ StrictServerInterface = (*Server)(nil)
